# Rakshak

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/database/: README.md
core/dns/: README.md
core/src/: lib.rs  paths.rs
core/src/blocklist/: mod.rs
core/src/platform/: macos.rs  mod.rs  service.rs  windows.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  ORIGINAL_README.md  SCHEMA.md  THREAT_MODEL.md  macos-setup.md  windows-setup.md
linux/: README.md  docker-compose.yml
linux/backend/: Dockerfile  go.mod  go.sum
linux/config/: defaults.yaml
linux/deploy/caddy/: Caddyfile
linux/deploy/prometheus/: prometheus.yml
linux/deploy/systemd/: rakshak.service
linux/dns/coredns/: Corefile  Dockerfile
linux/frontend/: Dockerfile  next.config.js  package.json
macos/: Package.swift  README.md  run.sh
macos/Helper/: README.md
macos/docs/: ARCHITECTURE.md
macos/launchd/: com.rakshak.daemon.plist
macos/scripts/: build-release.sh  doctor.sh  install.sh
scripts/: configure-router.sh  deploy.sh  failopen-watchdog.sh  install-mac.sh  install-windows.ps1  install.sh  uninstall.sh  update-blocklists.sh
scripts/firewall/: apply-nftables.sh  nftables-rakshak.nft
scripts/monitor/: healthcheck.sh
windows/: README.md  index.html  package.json  vite.config.ts
windows/src/: App.tsx  styles.css
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/src/: lib.rs  main.rs
(+57 files in other folders)
