[package]
name = "rakshak-core"
version = "1.0.0"
edition = "2021"
description = "Cross-platform core for RAKSHAK — blocklists, paths, platform services"
license = "Apache-2.0"
repository = "https://github.com/anant-byte/rakshak"

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"
