[package]
name = "rakshak-windows"
version = "1.0.0"
description = "Rakshak Windows desktop"
authors = ["Rakshak Contributors"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rakshak-core = { path = "../../core" }

[lib]
name = "rakshak_windows_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rakshak-windows"
path = "src/main.rs"
